# Superbubbles

./: .gitignore  CMakeLists.txt  CandidateList.cpp  CandidateList.hpp  DAG.cpp  DAG.hpp  DetectSuperBubble.cpp  DetectSuperBubble.hpp  DevelopersNotes.md  Graph.cpp  Graph.hpp  INSTALL  Makefile  Makefile.32-bit.gcc  Makefile.64-bit.gcc  README.md  Subgraph.cpp  Subgraph.hpp  globalDefs.hpp  helper.cpp  helperDefs.hpp  pre-install.sh  supbub.cpp
data/: sample.txt  sample.txt~  sample2.txt
include/eadib_log/: CMakeLists.txt  Logger.h
include/eadib_log/log_configuration/: LogConfig.h  OutputConfiguration.h
include/eadib_log/log_formatters/: Formatter.h  Formatter_types.h
include/eadib_log/log_outputs/: LogOutput.h  LogOutput_FileNew.h  LogOutput_FileOverwrite.h
src/: CandidateList.cpp  CandidateList.hpp  DAG.cpp  DAG.hpp  DetectSuperBubble.cpp  DetectSuperBubble.hpp  Graph.cpp  Graph.hpp  Subgraph.cpp  Subgraph.hpp  helper.cpp  helperDefs.hpp  supbub.cpp
src/Superbubble/algorithms/linear/: Graph.cpp  Subgraph.hpp
src/algo_linear/: globalDefs.hpp
src/eadib_log/: Logger.cpp  Logger.h
src/eadib_log/log_configuration/: LogConfig.h  LogLevel_types.h  OutputConfiguration.h  TimeStamp.h
src/eadib_log/log_formatters/: Formatter_Terminal.h
src/eadib_log/log_outputs/: LogOutput.h  LogOutput_FileAppend.h  LogOutput_Terminal.h  LogOutput_types.h
src/genomeMaker/: CMakeLists.txt  Creator.cpp  Creator.h  Randomiser.cpp  Randomiser.h  Reader.cpp  Reader.h  Writer.h  gmaker.cpp
src/genomeMaker/tools/: CLParser.cpp  CLParser.h  ProgressDisplay.cpp  ProgressDisplay.h  Randomiser.h
tests/: CMakeLists.txt  test.cpp  test_main.cpp
tests/genomeMaker/: CMakeLists.txt  Creator_tests.cpp
